# src/api/v1/operations.js
@@ -2,33 +2,50 @@ const express = require('express');
 const {BadRequest} = require('http-errors');
 const router = express.Router();
 
-
+router.get('/:reference', async (req, res) => {
+	const reference = req.params.reference;
+	const {Operations} = req.db;
+	const operation = await Operations.findOne({ where: {reference: reference} });
+	if (operation) {
+		return res.status(200).send(operation);
+	} else {
+		return res.status(404)
+			.send({message: `Reference ${reference} not found`});
+	}
+});
 
 router.get('/', async (req, res) => {
-    console.log(req);
-	const {type} = req.query;
+	const {type, emetteur, beneficiaire} = req.query;
 	const filter = {
 		where: {}
 	};
 	if (type) filter.where.type = type;
+	if (emetteur) filter.where.emetteur = emetteur;
+	if (beneficiaire) filter.where.beneficiaire = beneficiaire;
 
 	const {Operations} = req.db;
 	const operations = await Operations.findAll(filter);
 
-	res.send(operations);
+	if (operations.length > 0){
+		res.send(operations);
+	} else {
+		return res.status(404).send({ message: 'Operation not found' });
+	}
+
+	
 });
 
 router.post('/', async (req, res) => {
     try {
         // Vérifier que il y a un firstname, lastname, city, reference
         const body = req.body;
-        
         if (body.reference && body.emetteur && body.beneficiaire && body.montant && body.type) {
             // Insert dans la bdd
             const { Operations } = req.db;
             const operation = await Operations.create(body);
             return res.status(201).send(operation);
-        } else {
+        }
+        else {
             return res.status(400).send({ message: 'Missing data' });
         }
     } catch (err) {
@@ -39,4 +56,10 @@ router.post('/', async (req, res) => {
 
 });
 
+
+
+
 module.exports = router;
+
+
+
